--- a/probot/templates/deployment.yaml
+++ b/probot/templates/deployment.yaml
@@ -20,22 +20,51 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
     {{- end }}
+    initContainers:
+      - name: git-clone-repository
+        image: "{{ template "git.image" . }}"
+        imagePullPolicy: {{ .Values.git.pullPolicy | quote }}
+        command: [ '/bin/sh', '-c' , 'git clone {{ .Values.repository }} /app && cd /app && git checkout {{ .Values.revision }}']
+        volumeMounts:
+        - name: app
+          mountPath: /app
+      - name: npm-install
+        image: "{{ template "node.image" . }}"
+        imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
+        workingDir: /app
+        command: ['/bin/bash', '-c', 'npm install']
+        env:
+        - name: HOME
+          value: /tmp
+        volumeMounts:
+        - name: app
+          mountPath: /app
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          workingDir: /app
+          command: ['/bin/bash', '-c', 'npm start']
           ports:
             - name: http
-              containerPort: 80
-              protocol: TCP
+              containerPort: {{ .Values.applicationPort }}
           livenessProbe:
             httpGet:
               path: /
               port: http
+            initialDelaySeconds: 60
+            timeoutSeconds: 5
+            failureThreshold: 6
           readinessProbe:
             httpGet:
               path: /
               port: http
+            initialDelaySeconds: 10
+            timeoutSeconds: 3
+            periodSeconds: 5
+          volumeMounts:
+            - name: app
+              mountPath: /app
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
